<resources>

    <string name="app_name">极简微博</string>

    <string name="token_not_expired">正常</string>
    <string name="token_has_expired">已过期</string>
    <string name="new_account">新建</string>
    <string name="refresh">刷新</string>
    <string name="delete_account">删除该账号</string>
    <string name="to_top">置顶</string>
    
    <string name="timeout">网络有问题，连不上</string>
    <string name="error_login">授权失败</string>
    <string name="login_success">授权成功</string>
    <string name="update_account_success">已有该帐号，授权信息更新成功</string>
    <string name="token_expires_in_time">请注意，根据新浪微博的平台政策，刚添加的帐号会在 %s
        天后过期，到时需要重新登录，在授权过期之前重复登陆不会刷新剩余天数
    </string>
    <string name="ok">确定</string>
    
    <string name="loading_fail">网络问题，加载失败...</string>
    
    <string name="authenticationing">授权中</string>
    <string name="web_login">网页授权</string>
    <string name="app_login">客户端授权</string>
    <string name="black_login">黑魔法授权</string>
    
    <string name="t_home">首页</string>
    <string name="t_metions">提及</string>
    <string name="t_commnets">评论</string>
    <string name="t_fav">收藏</string>
    <string name="t_profile">个人资料</string>
    <string name="t_search">搜索</string>
    <string name="t_dm">私信</string>
    <string name="t_logout">注销</string>
    <string name="t_settings">设置</string>
    
    <string name="g_all">所有人</string>
    <string name="g_each">互相关注</string>
    <string name="g_special">特别关注</string>
    <string name="g_star">名人明星</string>
    <string name="g_it">科技</string>
    
    <string name="test_name">搞笑图片会</string>
    <string name="test_time">今天 10:15</string>
    <string name="test_source">皮皮时光机</string>
    <string name="test_content">【经济学入门必看：绝对经典的20部影片！】看完这20部电影，相当于你读完了北大经济学院、光华管理学院和清华经管学院。。。你信不信，反正我信了！！</string>
    <string name="test_count1">15</string>
    <string name="test_count2">2</string>
</resources>
