<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff2f2f2f" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:showDividers="middle"
        android:divider="@drawable/leftmenu_divider"
        android:padding="8dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="155dp"
            android:orientation="vertical" >

            <Spinner
                android:id="@+id/avatar"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/ic_menu_large_image"
                android:layout_gravity="center_horizontal"
                android:padding="6dp" />
            
            <TextView
                android:id="@+id/nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp" />

        </LinearLayout>
        
        <LinearLayout
	        android:layout_width="match_parent"
	        android:orientation="horizontal"
	        android:id="@+id/btn_home"
	        android:layout_height="wrap_content"
	        android:background="@drawable/leftmenu_item">

	        <Button
	            style="@style/leftmenu_btn_item"
	            android:background="@null"
	            android:clickable="false"
	            android:drawableLeft="@drawable/ic_menu_home"
	            android:text="@string/t_home" />
	
	    </LinearLayout>
	    
        <LinearLayout
	        android:layout_width="match_parent"
	        android:orientation="horizontal"
	        android:id="@+id/btn_mentions"
	        android:layout_height="wrap_content"
	        android:background="@drawable/leftmenu_item">

	        <Button
	            style="@style/leftmenu_btn_item"
	            android:background="@null"
	            android:clickable="false"
	            android:drawableLeft="@drawable/repost_light"
	            android:text="@string/t_metions" />
	
	    </LinearLayout>
	    
        <LinearLayout
	        android:layout_width="match_parent"
	        android:orientation="horizontal"
	        android:id="@+id/btn_comments"
	        android:layout_height="wrap_content"
	        android:background="@drawable/leftmenu_item">

	        <Button
	            style="@style/leftmenu_btn_item"
	            android:background="@null"
	            android:clickable="false"
	            android:drawableLeft="@drawable/comment_light"
	            android:text="@string/t_commnets" />
	
	    </LinearLayout>
	    
        <LinearLayout
	        android:layout_width="match_parent"
	        android:orientation="horizontal"
	        android:id="@+id/btn_dm"
	        android:layout_height="wrap_content"
	        android:background="@drawable/leftmenu_item">

	        <Button
	            style="@style/leftmenu_btn_item"
	            android:background="@null"
	            android:clickable="false"
	            android:drawableLeft="@drawable/ic_menu_message"
	            android:text="@string/t_dm" />
	
	    </LinearLayout>
	    
        <LinearLayout
	        android:layout_width="match_parent"
	        android:orientation="horizontal"
	        android:id="@+id/btn_fav"
	        android:layout_height="wrap_content"
	        android:background="@drawable/leftmenu_item">

	        <Button
	            style="@style/leftmenu_btn_item"
	            android:background="@null"
	            android:clickable="false"
	            android:drawableLeft="@drawable/fav_en_light"
	            android:text="@string/t_fav" />
	
	    </LinearLayout>
	    
        <LinearLayout
	        android:layout_width="match_parent"
	        android:orientation="horizontal"
	        android:id="@+id/btn_search"
	        android:layout_height="wrap_content"
	        android:background="@drawable/leftmenu_item">

	        <Button
	            style="@style/leftmenu_btn_item"
	            android:background="@null"
	            android:clickable="false"
	            android:drawableLeft="@drawable/ic_menu_search"
	            android:text="@string/t_search" />
	
	    </LinearLayout>
	    
        <LinearLayout
	        android:layout_width="match_parent"
	        android:orientation="horizontal"
	        android:id="@+id/btn_profile"
	        android:layout_height="wrap_content"
	        android:background="@drawable/leftmenu_item">

	        <Button
	            style="@style/leftmenu_btn_item"
	            android:background="@null"
	            android:clickable="false"
	            android:drawableLeft="@drawable/account_light"
	            android:text="@string/t_profile" />
	
	    </LinearLayout>
	    
        <LinearLayout
	        android:layout_width="match_parent"
	        android:orientation="horizontal"
	        android:id="@+id/btn_logout"
	        android:layout_height="wrap_content"
	        android:background="@drawable/leftmenu_item">

	        <Button
	            style="@style/leftmenu_btn_item"
	            android:background="@null"
	            android:clickable="false"
	            android:drawableLeft="@drawable/ic_menu_logout"
	            android:text="@string/t_logout" />
	
	    </LinearLayout>
	    
        <LinearLayout
	        android:layout_width="match_parent"
	        android:orientation="horizontal"
	        android:id="@+id/btn_settings"
	        android:layout_height="wrap_content"
	        android:background="@drawable/leftmenu_item">

	        <Button
	            style="@style/leftmenu_btn_item"
	            android:background="@null"
	            android:clickable="false"
	            android:drawableLeft="@drawable/ic_menu_settings"
	            android:text="@string/t_settings" />
	
	    </LinearLayout>

    </LinearLayout>

</ScrollView>
