<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/listview_item"
    android:background="@drawable/listview_item_backgroud_selector" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/bg_tacos" >

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/alipay"
            android:layout_marginRight="7dp"
            android:clickable="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="horizontal"
            android:id="@+id/count_layout" >

            <TextView
                android:id="@+id/repost_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:textColor="@color/gray"
                android:text="@string/test_count1"
                android:layout_marginLeft="8dp"
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/timeline_repost_dark" />

            <TextView
                android:id="@+id/comment_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:textColor="@color/gray"
                android:text="@string/test_count2"
                android:layout_marginLeft="8dp"
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/timeline_comment_dark"  />

        </LinearLayout>

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/avatar"
            android:layout_toLeftOf="@id/count_layout"
            android:text="@string/test_name"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:singleLine="true"
            android:ellipsize="end" />

        <TextView
            android:id="@+id/post_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_time"
            android:textSize="11sp"
            android:textColor="@color/gray"
            android:layout_below="@id/username"
            android:layout_toRightOf="@id/avatar"
            android:layout_marginTop="3dp" />

        <TextView
            android:id="@+id/source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_source"
            android:textSize="11sp"
            android:textColor="@color/gray"
            android:layout_below="@id/username"
            android:layout_toRightOf="@id/post_time"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="5dp" />

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_content"
            android:layout_below="@id/avatar"
            android:layout_marginTop="5dp"
            android:lineSpacingMultiplier="1.2"
            android:textSize="15sp"
            android:textColor="#343434" />

        <ImageView
            android:id="@+id/content_pic"
            android:layout_width="157dp"
            android:layout_height="157dp"
            android:src="@drawable/test_img1"
            android:scaleType="fitCenter"
            android:layout_below="@id/content"
            android:layout_centerHorizontal="true" />

        <GridLayout
            android:id="@+id/content_pic_muti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="3"
            android:layout_below="@id/content" >

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="3dp"
                android:scaleType="centerCrop"
                android:src="@drawable/test_muti1" />
            
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="3dp"
                android:scaleType="centerCrop"
                android:src="@drawable/test_muti2" />
            
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="3dp"
                android:scaleType="centerCrop"
                android:src="@drawable/test_muti3" />
            
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="3dp"
                android:scaleType="centerCrop"
                android:src="@drawable/test_muti4" />
            
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="3dp"
                android:scaleType="centerCrop"
                android:src="@drawable/test_muti5" />
            
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="3dp"
                android:scaleType="centerCrop"
                android:src="@drawable/test_muti6" />
            
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="3dp"
                android:scaleType="centerCrop"
                android:src="@drawable/test_muti7" />
            
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="3dp"
                android:scaleType="centerCrop"
                android:src="@drawable/test_muti8" />
            
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="3dp"
                android:scaleType="centerCrop"
                android:src="@drawable/test_muti9" />

        </GridLayout>

    </RelativeLayout>

</FrameLayout>
